# stacker

./: .gitignore  CODE_SIGNING.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: phase-1-task-3-report.md  phase-1-task-6-report.md
design/: preview.html
design/proto/: app.css  go.html  (+12 more)
docs/: OPEN_SOURCE.md
resources/: PORTABLE_README.txt  latest.json  mirrors.json  sources.json
scripts/: check-release-metadata.mjs  release-windows.ps1
src/: App.tsx  EcoActions.tsx  LogViewer.tsx  Select.tsx  SourceManagerModal.tsx  SourcesPanel.tsx  TerminalBar.tsx  VersionManager.tsx  en.generated.ts  frontendSettings.test.ts  frontendSettings.ts  gitCapabilities.test.ts  gitCapabilities.ts  i18n.test.ts  i18n.ts  invoke.ts  main.tsx  notifications.tsx  styles.css  theme.ts  ui.tsx  updateHelpers.test.ts  updateHelpers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/tools/: THIRD_PARTY_TOOLS.md
src-tauri/src/: backup.rs  binary.rs  bundle.rs  catalog.rs  checkup.rs  cleanup.rs  custom.rs  dpapi.rs  env.rs  fnm.rs  git.rs  gradle.rs  installer.rs  jdk.rs  lib.rs  main.rs  profile.rs  proxy.rs  pyenv.rs  rustup.rs  settings.rs  sources.rs  update.rs  versions.rs  vibe.rs  winadmin.rs  winenv.rs
src-tauri/src/space_analysis/: classifier.rs  cleanup_plan.rs  cleanup_tasks.rs  elevated.rs  known.rs  mod.rs  model.rs  snapshots.rs  targets.rs  tasks.rs  walker.rs  windows_fs.rs
(+46 files in other folders)
